src/test/deca/context/valid/print/print-string-int.deca
// Description:
//    Programme minimaliste utilisant une concatenation 
//    de'une chaine et d'un entier comme parametre de print.
//
// Resultats:
//    Hello2

{
    int a = 2;
    print("Hello", a);
}