src/test/deca/context/invalid/print/printx-incompatible.deca
// Description:
//    Programme minimaliste d'un booleen comme parametre de printx.
//
// Resultats:
//    Erreur ligne 9

{
    bool a = true;
    printx(a);
}